--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur itaque atq
                 </div>
                 <div class="contacts__section">
                     <div class="contacts__section-header headline headline_mini">E-mail</div>
-                    <div class="contacts__section-content">opalubka<span style="color: #aa0114">@</span></div>
+                    <div class="contacts__section-content">opalubka<span style="color: #aa0114">@</span>gmail.com</div>
                 </div>
             </div>
         </div>
