Cosmetics in contacts

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur itaque atq
                 <div class="contacts__section">
                     <div class="contacts__section-header headline headline_mini">Телефон</div>
                     <div class="contacts__section-content">
-                        8 <span style="color: #aa0114">(928)</span> 123 45 67
+                        <a class="contacts__link" href="tell:+79281234567">8 <span style="color: #aa0114">(928)</span> 123 45 67</a>
                     </div>
                 </div>
                 <div class="contacts__section">
@@ -81,7 +81,9 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur itaque atq
                 </div>
                 <div class="contacts__section">
                     <div class="contacts__section-header headline headline_mini">E-mail</div>
-                    <div class="contacts__section-content">opalubka<span style="color: #aa0114">@</span>gmail.com</div>
+                    <div class="contacts__section-content">
+                        <a class="contacts__link" href="mailto: opalubka@gmail.com">opalubka<span style="color: #aa0114">@</span>gmail.com</a>
+                    </div>
                 </div>
             </div>
         </div>
